[INTERNAL] sap.m.WizardProgressNavigator: Alignment of steps' titles corrected

--- a/src/sap.m/src/sap/m/themes/base/WizardProgressNavigator.less
+++ b/src/sap.m/src/sap/m/themes/base/WizardProgressNavigator.less
@@ -226,6 +226,7 @@ html.sap-phone .sapMWizardProgressNav {
 	line-height: @_sap_m_WizardProgressNavigator_ListHeight  / 2;
 	font-size: @sapMFontMediumSize;
 	color: @sapUiGroupTitleTextColor;
+	vertical-align: middle;
 }
 
 .sapMWizardProgressNavAnchorTitleOptional {
